<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" 
    android:orientation="vertical">
	<LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
	    >
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/welcomemessage"
        android:text="@string/home_message"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <ImageView
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:contentDescription="@string/logotext"
        android:paddingTop="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="30sp"
        >
        <Button  
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:text="@string/start"
        	android:drawableLeft="@drawable/start"
        	android:id="@+id/start"
        	android:padding="10sp"
        	style="@style/ButtonFont"
        	/>
        <Button  
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:text="@string/guide"
        	android:drawableLeft="@drawable/howtoplay"
        	android:id="@+id/guide"
        	style="@style/ButtonFont"
        	/>
        <Button  
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:text="@string/score"
        	android:drawableLeft="@drawable/settings"
        	android:id="@+id/scoresbutton"
        	style="@style/ButtonFont"
        	/>
        <Button  
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:text="@string/quit"
        	android:drawableLeft="@drawable/about"
        	android:id="@+id/quit"
        	style="@style/ButtonFont"
        	/>
    </LinearLayout>
</LinearLayout>
</ScrollView>